examples/valid/calculator.ctds
Program {
    int add(int x, int y, int z) {
        return x + y;
    }

    int sub(int x, int y) {
        return x - y;
    }

    int div(int x, int y) {
        return x / y;
    }

    void main() {
        int x = 5;
        int y;

        int resultSum = add(5 + 15, sub(3, 3 * 8 * 9), div(10, 2));
        return resultSum;
    }
}
