examples/invalid/vii.ctds
Program {
    integer inc(integer x) {
        return x + 1;
    }

    integer get_int() extern;

    void print_int(integer i) extern;

    void main() {
        integer y;
        y = get_int();
        if (y == 1) then {
            print_int(y);
        }
        else {
            print_int(inc(y));
        }
    }
}
